<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/activity_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/activities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:entries="@array/activities"
                android:gravity="center" />

            <TextView
                android:id="@+id/activity_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/no_time"
                android:textSize="36sp" />

            <Button
                android:id="@+id/activity_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/activity_button_start" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/sensor_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/tracked_sensors"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tracked_sensors"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageButton
                    android:id="@+id/edit_tracked_sensors"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/tracked_sensors_edit"
                    android:scaleType="fitXY"
                    android:tint="@color/colorPrimary"
                    app:layout_constraintRight_toRightOf="parent"
                    app:srcCompat="@drawable/ic_edit" />
            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>